tests/03-typecheck/02-func-redefined.sl
@import stdlib

func sum (int, int) (int) in
    +
end

func sum (int, int, int) (int) in
    + +
end
